# bazel_env.bzl

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  bazel_env.bzl  launcher.bat.tpl  launcher.sh.tpl  status.bat.tpl  status.sh.tpl
.bcr/: config.yml  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: ci.yml  publish.yaml  release.yml  release_prep.sh
docs/: BUILD.bazel  update.sh
docs-gen/: bazel_env.md
examples/: .bazelrc  .envrc  BUILD.bazel  MODULE.bazel  bazel_env_test.sh  bazel_env_test_windows.sh  echo_tool.sh  fake_bazel.bat  fake_bazel.sh  loc_tool.sh  location_test_data.txt  python_tool.py  python_tool_lib.py  test_helpers.bzl  tools.lock.json
examples/jq-dir/: values.json
