load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

stardoc(
    name = "bazel_env",
    out = "bazel_env.md",
    input = "//:bazel_env.bzl",
    deps = ["//:bazel_env"],
)

diff_test(
    name = "bazel_env_test",
    failure_message = "Please run:\n    bazel run //docs:update",
    file1 = "bazel_env.md",
    file2 = "//docs-gen:bazel_env.md",
)

sh_binary(
    name = "update",
    srcs = ["update.sh"],
    data = [
        ":bazel_env",
    ],
)
